<resources>
    <string name="app_name">SimpleNews</string>
    <string name="activity_weather_name">Weather</string>
    <string name="action_settings">Settings</string>
    <string name="viewholder_main_weather_date">CURRENT DATE</string>
    <string name="viewholder_main_weather_location">CURRENT LOCATION</string>
    <string name="viewholder_main_weather_image_view">Current Weather</string>
    <string name="viewholder_main_weather_current_temperature">CURRENT TEMPERATURE</string>
    <string name="viewholder_main_weather_day">DAY</string>
    <string name="viewholder_main_weather_image_view_day">Weather Condtion</string>
    <string name="viewholder_main_weather_temperature_day">100</string>
    <string name="viewholder_main_weather_card_title">Weather</string>
    <string name="viewholder_main_news_card_title">News</string>
    <string name="viewholder_main_news_temporary_headline">Headline</string>
    <string name="viewholder_main_news_top_news">Top Headlines</string>
    <string name="viewholder_weather_conditions">Conditions</string>
    <string name="viewholder_weather_date">Date</string>
    <string name="viewholder_weather_image_view">Current Weather</string>
    <string name="viewholder_weather_humidity">Humidity</string>
    <string name="viewholder_weather_null">Null</string>
    <string name="viewholder_weather_wind">Wind</string>
    <string name="viewholder_weather_pressure">Pressure</string>
    <string name="viewholder_weather_cloudiness">Cloudiness</string>
    <string name="viewholder_weather_temperature_placeholder">50</string>
    <string name="title_activity_news">News</string>
    <string name="viewholder_news_pocket_button">POCKET</string>
    <string name="viewholder_news_share_button">SHARE</string>
    <string name="viewholder_news_read_button">READ</string>
    <string name="pocket_class_name">com.ideashower.readitlater.pro</string>
    <string name="pocket_save_activity_name">com.ideashower.readitlater.activity.AddActivity</string>
    <string name="dialog_input_zip_message">Enter zip code</string>
    <string name="dialog_input_zip_message_hint">Zip code</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_settings_sources">Sources</string>
    <string name="title_activity_article">Article</string>
    <string name="action_add_source">Add source</string>
    <string name="dialog_input_country_message">Select your country</string>
    <string name="shared_preference_zip_code">zip_code</string>
    <string name="shared_preference_country_code">country_code</string>
    <string name="shared_preference_first_time_running">first_time_running</string>
    <string name="url_to_load">url_to_load</string>
    <string name="title_activity_web">Browser</string>
    <string name="menu_web_share">Share</string>
    <string name="menu_web_open_in_browser">Open in browser</string>
    <string name="dialog_input_add_source_message">Source name</string>
    <string name="dialog_input_add_source_message_hint">Enter a unique name</string>
    <string name="dialog_input_add_source_rss">RSS Url</string>
    <string name="dialog_input_add_source_rss_hint">Enter a valid RSS url</string>
    <string name="dialog_input_edit_source_name">Source name</string>
    <string name="dialog_input_edit_source_name_hint">Enter a unique name</string>
    <string name="dialog_input_edit_source_rss">RSS Url</string>
    <string name="dialog_input_edit_source_rss_hint">Enter a valid RSS url</string>
    <string name="pref_dark_theme">pref_dark_theme</string>
    <string name="title_theme">Theme</string>
    <string name="dialog_input_add_source_category">Category</string>
    <string name="dialog_input_edit_source_category">Category</string>

</resources>
