<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/dialog_input_add_source_message"
        android:id="@+id/dialog_input_add_source_message"
        android:textColor="?android:textColorPrimary"/>

    <EditText
        android:id="@+id/dialog_input_add_source_edit_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_input_add_source_message_hint"
        android:padding="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/dialog_input_add_source_rss"
        android:id="@+id/dialog_input_add_source_rss"
        android:textColor="?android:textColorPrimary"/>

    <EditText
        android:id="@+id/dialog_input_add_source_rss_edit_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_input_add_source_rss_hint"
        android:padding="10dp" />

</LinearLayout>