<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/dialog_input_edit_source_name"
        android:id="@+id/dialog_input_edit_source_name"
        android:textColor="?android:textColorPrimary"/>

    <EditText
        android:id="@+id/dialog_input_edit_source_name_edit_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_input_edit_source_name_hint"
        android:padding="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/dialog_input_edit_source_rss"
        android:id="@+id/dialog_input_edit_source_rss"
        android:textColor="?android:textColorPrimary"/>

    <EditText
        android:id="@+id/dialog_input_edit_source_rss_edit_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_input_edit_source_rss_hint"
        android:padding="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/dialog_input_edit_source_category"
        android:id="@+id/dialog_input_edit_source_dialog_input_add_source_category"
        android:textColor="?android:textColorPrimary"/>

    <Spinner
        android:popupBackground="?android:panelColorForeground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/dialog_input_edit_category_spinner"
        android:entries="@array/categoryArray"
        android:entryValues="@array/categoryArray" />

</LinearLayout>