<android.support.v7.widget.CardView
    android:layout_margin="10dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:clickable="true"
    android:foreground="?android:attr/selectableItemBackground"
    android:id="@+id/viewholder_main_news_card_view"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:padding="1dp">

    <LinearLayout
        android:layout_margin="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/viewholder_weather_date"
            android:text="@string/viewholder_weather_date"
            android:textSize="@dimen/text_size_headline"
            android:textColor="@color/primary_text"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/viewholder_weather_conditions"
            android:text="@string/viewholder_weather_conditions"
            android:textSize="@dimen/text_size_subhead"
            android:textColor="@color/secondary_text"/>

        <LinearLayout
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/viewholder_weather_current_condition_graphic"
                android:src="@mipmap/ic_cloudy"
                android:contentDescription="@string/viewholder_weather_image_view"/>

            <LinearLayout
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/viewholder_weather_temperature_high"
                    android:text="@string/viewholder_weather_temperature_placeholder"
                    android:textSize="@dimen/text_size_headline"
                    android:textColor="@color/primary_text"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/viewholder_weather_temperature_low"
                    android:text="@string/viewholder_weather_temperature_placeholder"
                    android:textSize="@dimen/text_size_headline"
                    android:textColor="@color/secondary_text"/>


            </LinearLayout>

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <GridLayout
                android:rowCount="1"
                android:columnCount="2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_gravity="start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:text="@string/viewholder_weather_humidity"
                    android:textSize="@dimen/text_size_subhead"
                    android:textColor="@color/primary_text"/>

                <TextView
                    android:layout_gravity="end"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:id="@+id/viewholder_weather_humidity"
                    android:text="@string/viewholder_weather_null"
                    android:textSize="@dimen/text_size_subhead"
                    android:textColor="@color/secondary_text"/>

            </GridLayout>

            <GridLayout
                android:rowCount="1"
                android:columnCount="2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_gravity="start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:text="@string/viewholder_weather_wind"
                    android:textSize="@dimen/text_size_subhead"
                    android:textColor="@color/primary_text"/>

                <TextView
                    android:layout_gravity="end"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:id="@+id/viewholder_weather_wind"
                    android:text="@string/viewholder_weather_null"
                    android:textSize="@dimen/text_size_subhead"
                    android:textColor="@color/secondary_text"/>

            </GridLayout>

            <GridLayout
                android:rowCount="1"
                android:columnCount="2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_gravity="start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:text="@string/viewholder_weather_pressure"
                    android:textSize="@dimen/text_size_subhead"
                    android:textColor="@color/primary_text"/>

                <TextView
                    android:layout_gravity="end"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:id="@+id/viewholder_weather_pressure"
                    android:text="@string/viewholder_weather_null"
                    android:textSize="@dimen/text_size_subhead"
                    android:textColor="@color/secondary_text"/>

            </GridLayout>

            <GridLayout
                android:rowCount="1"
                android:columnCount="2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_gravity="start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:text="@string/viewholder_weather_cloudiness"
                    android:textSize="@dimen/text_size_subhead"
                    android:textColor="@color/primary_text"/>

                <TextView
                    android:layout_gravity="end"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:id="@+id/viewholder_weather_cloudiness"
                    android:text="@string/viewholder_weather_null"
                    android:textSize="@dimen/text_size_subhead"
                    android:textColor="@color/secondary_text"/>

            </GridLayout>


        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>