<android.support.v7.widget.CardView
    android:layout_margin="10dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:clickable="true"
    android:foreground="?android:attr/selectableItemBackground"
    android:id="@+id/viewholder_main_weather_card_view"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:padding="1dp">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:padding="@dimen/activity_horizontal_margin"
            android:id="@+id/viewholder_main_weather_card_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primary_color"
            android:gravity="center"
            android:text="@string/viewholder_main_weather_card_title"
            android:textColor="@color/text_icons"
            android:textSize="@dimen/text_size_display_1"/>


        <LinearLayout
            android:layout_below="@id/viewholder_main_weather_card_title"
            android:layout_alignParentTop="@id/viewholder_main_weather_card_title"
            android:id="@+id/viewholder_main_weather_linear_layout_1"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_marginTop="@dimen/activity_horizontal_margin_plus"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginStart="@dimen/activity_vertical_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/viewholder_main_weather_date"
                android:text="@string/viewholder_main_weather_date"
                android:textSize="@dimen/text_size_headline"
                android:textColor="@color/primary_text"/>

            <TextView
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginStart="@dimen/activity_vertical_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/viewholder_main_weather_location"
                android:text="@string/viewholder_main_weather_location"
                android:textSize="@dimen/text_size_subhead"
                android:textColor="@color/secondary_text"/>

            <ImageView
                android:layout_gravity="center"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/viewholder_main_weather_current_condition_graphic"
                android:src="@mipmap/ic_cloudy"
                android:contentDescription="@string/viewholder_main_weather_image_view"
                />

            <TextView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/viewholder_main_weather_current_temperature"
                android:text="@string/viewholder_main_weather_current_temperature"
                android:textSize="@dimen/text_size_headline"
                android:textColor="@color/primary_text"
                />

            <LinearLayout
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginStart="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:layout_marginEnd="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/viewholder_main_weather_linear_layout_2">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/viewholder_main_weather_day_1"
                        android:text="@string/viewholder_main_weather_day"
                        android:textSize="@dimen/text_size_body"
                        android:textColor="@color/primary_text" />

                    <ImageView
                        android:layout_gravity="center"
                        android:layout_width="55dp"
                        android:layout_height="55dp"
                        android:id="@+id/viewholder_main_weather_image_view_day_1"
                        android:src="@mipmap/ic_cloudy"
                        android:contentDescription="@string/viewholder_main_weather_image_view_day"/>

                    <TextView
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/viewholder_main_weather_temperature_day_1_high"
                        android:text="@string/viewholder_main_weather_temperature_day"
                        android:textSize="@dimen/text_size_subhead"
                        android:textColor="@color/primary_text"/>

                    <TextView
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/viewholder_main_weather_temperature_day_1_low"
                        android:text="@string/viewholder_main_weather_temperature_day"
                        android:textSize="@dimen/text_size_subhead"
                        android:textColor="@color/secondary_text"/>

                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/viewholder_main_weather_day_2"
                        android:text="@string/viewholder_main_weather_day"
                        android:textSize="@dimen/text_size_body"
                        android:textColor="@color/primary_text" />

                    <ImageView
                        android:layout_gravity="center"
                        android:layout_width="55dp"
                        android:layout_height="55dp"
                        android:id="@+id/viewholder_main_weather_image_view_day_2"
                        android:src="@mipmap/ic_cloudy"
                        android:contentDescription="@string/viewholder_main_weather_image_view_day"/>

                    <TextView
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/viewholder_main_weather_temperature_day_2_high"
                        android:text="@string/viewholder_main_weather_temperature_day"
                        android:textSize="@dimen/text_size_subhead"
                        android:textColor="@color/primary_text"/>

                    <TextView
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/viewholder_main_weather_temperature_day_2_low"
                        android:text="@string/viewholder_main_weather_temperature_day"
                        android:textSize="@dimen/text_size_subhead"
                        android:textColor="@color/secondary_text"/>

                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/viewholder_main_weather_day_3"
                        android:text="@string/viewholder_main_weather_day"
                        android:textSize="@dimen/text_size_body"
                        android:textColor="@color/primary_text" />

                    <ImageView
                        android:layout_gravity="center"
                        android:layout_width="55dp"
                        android:layout_height="55dp"
                        android:id="@+id/viewholder_main_weather_image_view_day_3"
                        android:src="@mipmap/ic_cloudy"
                        android:contentDescription="@string/viewholder_main_weather_image_view_day"/>

                    <TextView
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/viewholder_main_weather_temperature_day_3_high"
                        android:text="@string/viewholder_main_weather_temperature_day"
                        android:textSize="@dimen/text_size_subhead"
                        android:textColor="@color/primary_text"/>

                    <TextView
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/viewholder_main_weather_temperature_day_3_low"
                        android:text="@string/viewholder_main_weather_temperature_day"
                        android:textSize="@dimen/text_size_subhead"
                        android:textColor="@color/secondary_text"/>

                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/viewholder_main_weather_day_4"
                        android:text="@string/viewholder_main_weather_day"
                        android:textSize="@dimen/text_size_body"
                        android:textColor="@color/primary_text" />

                    <ImageView
                        android:layout_gravity="center"
                        android:layout_width="55dp"
                        android:layout_height="55dp"
                        android:id="@+id/viewholder_main_weather_image_view_day_4"
                        android:src="@mipmap/ic_cloudy"
                        android:contentDescription="@string/viewholder_main_weather_image_view_day"/>

                    <TextView
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/viewholder_main_weather_temperature_day_4_high"
                        android:text="@string/viewholder_main_weather_temperature_day"
                        android:textSize="@dimen/text_size_subhead"
                        android:textColor="@color/primary_text"/>

                    <TextView
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/viewholder_main_weather_temperature_day_4_low"
                        android:text="@string/viewholder_main_weather_temperature_day"
                        android:textSize="@dimen/text_size_subhead"
                        android:textColor="@color/secondary_text"/>

                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/viewholder_main_weather_day_5"
                        android:text="@string/viewholder_main_weather_day"
                        android:textSize="@dimen/text_size_body"
                        android:textColor="@color/primary_text" />

                    <ImageView
                        android:layout_gravity="center"
                        android:layout_width="55dp"
                        android:layout_height="55dp"
                        android:id="@+id/viewholder_main_weather_image_view_day_5"
                        android:src="@mipmap/ic_cloudy"
                        android:contentDescription="@string/viewholder_main_weather_image_view_day"/>

                    <TextView
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/viewholder_main_weather_temperature_day_5_high"
                        android:text="@string/viewholder_main_weather_temperature_day"
                        android:textSize="@dimen/text_size_subhead"
                        android:textColor="@color/primary_text"/>

                    <TextView
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/viewholder_main_weather_temperature_day_5_low"
                        android:text="@string/viewholder_main_weather_temperature_day"
                        android:textSize="@dimen/text_size_subhead"
                        android:textColor="@color/secondary_text"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <com.getbase.floatingactionbutton.AddFloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignBottom="@id/viewholder_main_weather_card_title"
            android:layout_marginBottom="-40dp"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_marginEnd="@dimen/activity_vertical_margin"
            xmlns:fab="http://schemas.android.com/apk/res-auto"
            android:id="@+id/viewholder_main_weather_fab"
            fab:fab_colorNormal="@color/accent_color" />

    </RelativeLayout>

</android.support.v7.widget.CardView>